--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.io/costik2020/0028-react-calculator",
-  "name": "0023-calculator-in-react",
+  "homepage": "https://costik2020.github.io/0028-react-calculator/",
+  "name": "0028-calculator-in-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
